--- a/plugins/calendar/skins/violet-larry/calendar.css
+++ b/plugins/calendar/skins/violet-larry/calendar.css
@@ -223,7 +223,12 @@ pre {
 	overflow-x: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
-	color: #efe7e6;
+	color: #3f1a67;
+}
+
+#calendars .treelist li.selected span.calname {
+	color: #ebe8ef;
+	font-weight: bold;
 }
 
 .quickview-active #calendars .treelist div input,
